src/test/ui/consts/issue-90878-2.stderr
error: unexpected token: `|x| [b; x]`
  --> $DIR/issue-90878-2.rs:1:7
   |
LL |  #![l=|x|[b;x ]]
   |       ^^^^^^^^^

error: cannot find attribute `l` in this scope
  --> $DIR/issue-90878-2.rs:1:5
   |
LL |  #![l=|x|[b;x ]]
   |     ^

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-90878-2.rs:1:13
   |
LL |  #![l=|x|[b;x ]]
   |        -    ^
   |        |
   |        this would need to be a `const`

error[E0425]: cannot find value `b` in this scope
  --> $DIR/issue-90878-2.rs:1:11
   |
LL |  #![l=|x|[b;x ]]
   |           ^ help: a local variable with a similar name exists: `x`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0425, E0435.
For more information about an error, try `rustc --explain E0425`.
